--- a/index.html
+++ b/index.html
@@ -10,19 +10,18 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="./style.css" />
+    <script src="main.js" defer></script>
     <title>Light/Dark theme toogle</title>
   </head>
   <body>
-    <h1>Theme Swapper</h1>
+    <h2 class="title">Theme Swapper</h2>
     <button class="theme-toggle-button">
       <i class="bi bi-alarm"></i>
       Swap Themes
     </button>
     <div class="sun-moon-container">
-      <i class="bi bi-moon-stars-fill"></i>
       <i class="bi bi-brightness-low-fill"></i>
+      <i class="bi bi-moon-stars-fill"></i>
     </div>
-
-    <script src="./main.js"></script>
   </body>
 </html>
